{
  "version": 4,
  "terraform_version": "1.0.1",
  "serial": 257,
  "lineage": "9bcb80a1-b6e4-cd4f-6fa8-f7997baa0692",
  "resources": [
    {
      "module": "module.aws_alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:900715294536:loadbalancer/app/HealingPeace/b0037548a9acce3b",
            "arn_suffix": "app/HealingPeace/b0037548a9acce3b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "HealingPeace-115516705.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:900715294536:loadbalancer/app/HealingPeace/b0037548a9acce3b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "HealingPeace",
            "security_groups": [
              "sg-022be3be876a8a28d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-021cc937b2a556274"
              },
              {
                "subnet_id": "subnet-0f21862fe327f9df4"
              }
            ],
            "subnets": [
              "subnet-021cc937b2a556274",
              "subnet-0f21862fe327f9df4"
            ],
            "vpc_id": "vpc-04c5dab518b6fc643",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.aws_security_group.aws_security_group.lb",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.main",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:900715294536:listener/app/HealingPeace/b0037548a9acce3b/3033247f5b4ac90c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:900715294536:listener/app/HealingPeace/b0037548a9acce3b/3033247f5b4ac90c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:900715294536:loadbalancer/app/HealingPeace/b0037548a9acce3b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.main",
            "module.aws_vpc.data.aws_availability_zones.available",
            "module.aws_alb.aws_alb.main",
            "module.aws_security_group.aws_security_group.lb"
          ]
        }
      ]
    },
    {
      "module": "module.aws_alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:900715294536:listener/app/HealingPeace/b0037548a9acce3b/019ae45ba178df2d",
            "certificate_arn": "arn:aws:acm:us-east-2:900715294536:certificate/76dfde5a-db4e-4340-a350-40eec3207294",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:900715294536:targetgroup/cb-target-group-HealingPeace/f48c8799b19b05b8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:900715294536:listener/app/HealingPeace/b0037548a9acce3b/019ae45ba178df2d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:900715294536:loadbalancer/app/HealingPeace/b0037548a9acce3b",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_alb.aws_alb.main",
            "module.aws_alb.aws_alb_target_group.app",
            "module.aws_security_group.aws_security_group.lb",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.main",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:900715294536:targetgroup/cb-target-group-HealingPeace/f48c8799b19b05b8",
            "arn_suffix": "targetgroup/cb-target-group-HealingPeace/f48c8799b19b05b8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/elb-check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:900715294536:targetgroup/cb-target-group-HealingPeace/f48c8799b19b05b8",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "cb-target-group-HealingPeace",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04c5dab518b6fc643"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:900715294536:security-group/sg-0dc3e0bfe48fddeb4",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc3e0bfe48fddeb4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-022be3be876a8a28d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cb-ecs-tasks-security-group",
            "name_prefix": "",
            "owner_id": "900715294536",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04c5dab518b6fc643"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_security_group.aws_security_group.lb",
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:900715294536:security-group/sg-022be3be876a8a28d",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-022be3be876a8a28d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cb-load-balancer-security-group",
            "name_prefix": "",
            "owner_id": "900715294536",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04c5dab518b6fc643"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0754312dff9134c10",
            "association_id": "eipassoc-0c1c2e421f999ff15",
            "domain": "vpc",
            "id": "eipalloc-0754312dff9134c10",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0d4fc8141b858dc61",
            "private_dns": "ip-172-17-2-218.us-east-2.compute.internal",
            "private_ip": "172.17.2.218",
            "public_dns": "ec2-18-220-152-49.us-east-2.compute.amazonaws.com",
            "public_ip": "18.220.152.49",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main",
            "module.aws_vpc.aws_internet_gateway.gw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0226340f7d09e3be6",
            "association_id": "eipassoc-011d4d636e9c679ff",
            "domain": "vpc",
            "id": "eipalloc-0226340f7d09e3be6",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0e2f41b068eb0eae2",
            "private_dns": "ip-172-17-3-143.us-east-2.compute.internal",
            "private_ip": "172.17.3.143",
            "public_dns": "ec2-3-13-83-173.us-east-2.compute.amazonaws.com",
            "public_ip": "3.13.83.173",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.gw",
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:900715294536:internet-gateway/igw-0ab08da15e3a43afd",
            "id": "igw-0ab08da15e3a43afd",
            "owner_id": "900715294536",
            "vpc_id": "vpc-04c5dab518b6fc643"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0754312dff9134c10",
            "connectivity_type": "public",
            "id": "nat-046381d58e5eb0a70",
            "network_interface_id": "eni-0d4fc8141b858dc61",
            "private_ip": "172.17.2.218",
            "public_ip": "18.220.152.49",
            "subnet_id": "subnet-0f21862fe327f9df4"
          },
          "dependencies": [
            "module.aws_vpc.aws_eip.gw",
            "module.aws_vpc.aws_internet_gateway.gw",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.main",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0226340f7d09e3be6",
            "connectivity_type": "public",
            "id": "nat-0adad5faa99c17ed6",
            "network_interface_id": "eni-0e2f41b068eb0eae2",
            "private_ip": "172.17.3.143",
            "public_ip": "3.13.83.173",
            "subnet_id": "subnet-021cc937b2a556274"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main",
            "module.aws_vpc.data.aws_availability_zones.available",
            "module.aws_vpc.aws_eip.gw",
            "module.aws_vpc.aws_internet_gateway.gw",
            "module.aws_vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ab08da15e3a43afd",
            "id": "r-rtb-0932158d857d39c921080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0932158d857d39c92",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.gw",
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:900715294536:route-table/rtb-052c4d5fe420e7f44",
            "id": "rtb-052c4d5fe420e7f44",
            "owner_id": "900715294536",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-046381d58e5eb0a70",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04c5dab518b6fc643"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_eip.gw",
            "module.aws_vpc.aws_internet_gateway.gw",
            "module.aws_vpc.aws_nat_gateway.gw",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.main",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:900715294536:route-table/rtb-05068539f831efc8d",
            "id": "rtb-05068539f831efc8d",
            "owner_id": "900715294536",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0adad5faa99c17ed6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04c5dab518b6fc643"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_nat_gateway.gw",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.main",
            "module.aws_vpc.data.aws_availability_zones.available",
            "module.aws_vpc.aws_eip.gw",
            "module.aws_vpc.aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09954ba9150996b65",
            "route_table_id": "rtb-052c4d5fe420e7f44",
            "subnet_id": "subnet-0bd57bac22de6b958"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main",
            "module.aws_vpc.data.aws_availability_zones.available",
            "module.aws_vpc.aws_eip.gw",
            "module.aws_vpc.aws_internet_gateway.gw",
            "module.aws_vpc.aws_nat_gateway.gw",
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03dbfca387d12a9ba",
            "route_table_id": "rtb-05068539f831efc8d",
            "subnet_id": "subnet-02087cfaf68257925"
          },
          "dependencies": [
            "module.aws_vpc.aws_nat_gateway.gw",
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.main",
            "module.aws_vpc.data.aws_availability_zones.available",
            "module.aws_vpc.aws_eip.gw",
            "module.aws_vpc.aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:900715294536:subnet/subnet-0bd57bac22de6b958",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.17.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd57bac22de6b958",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900715294536",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-04c5dab518b6fc643"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:900715294536:subnet/subnet-02087cfaf68257925",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.17.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02087cfaf68257925",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900715294536",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-04c5dab518b6fc643"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:900715294536:subnet/subnet-0f21862fe327f9df4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.17.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f21862fe327f9df4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "900715294536",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-04c5dab518b6fc643"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:900715294536:subnet/subnet-021cc937b2a556274",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.17.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021cc937b2a556274",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "900715294536",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-04c5dab518b6fc643"
          },
          "dependencies": [
            "module.aws_vpc.data.aws_availability_zones.available",
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:900715294536:vpc/vpc-04c5dab518b6fc643",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-0b1acb434b6a646b2",
            "default_route_table_id": "rtb-0932158d857d39c92",
            "default_security_group_id": "sg-04e3f75bbdb5e44d9",
            "dhcp_options_id": "dopt-0da0c3f2a3305702a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04c5dab518b6fc643",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0932158d857d39c92",
            "owner_id": "900715294536"
          }
        }
      ]
    }
  ]
}